--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="banner" class="section">
       <div class="contain">
         <div class="d_d">
-          <h3>Hello, I'm Sunyoung Monster Village</h3>
+          <h3>Hello, I'm Sunyoung</h3>
           <img src="../portfolio/image/banner_1.png" alt="">
         </div>
         <img class="shadow" src="../portfolio/image/banner_2.png" alt="">
@@ -40,14 +40,14 @@
       <div class="contain">
         <h3>About me</h3>
         <div class="clearfix">
-          <img src="../portfolio/image/icon22.png" alt="나">
-          <ul class="profile">
+          <img src="../portfolio/image/icon223.png" alt="나">
+          <!-- <ul class="profile">
             <li>이름 주선영</li>
             <li>나이 1998년 9월 (만 21세)</li>
             <li>이메일 wjsdud248@naver.com</li>
             <li>전화 010 5041 5688</li>
             <li class="codepen"><a href="https://codepen.io/wjsdud248">codepen</a></li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </section>
@@ -56,14 +56,17 @@
         <h4>IllustTratIoN</h4>
         <ul class="itt clearfix">
           <li>
+            <p>an airship</p>
             <a href="../portfolio/illust1/index.html" target="_blank"><img src="../portfolio/image/Ai_1.png" alt="비행선 그림"></a>
             <img src="../portfolio/image/Ai_1_S.png" alt="그림자">
           </li>
           <li>
+            <p>a day of A</p>
             <a href="../portfolio/illust2/index.html" target="_blank"><img src="../portfolio/image/Ai_2.png" alt="A 그림"></a>
             <img src="../portfolio/image/Ai_1_S.png" alt="그림자">
           </li>
           <li>
+            <p>Travel</p>
             <a href="../portfolio/illust3/index.html" target="_blank"><img src="../portfolio/image/Ai_3.png" alt="토끼 비행선 그림"></a>
             <img src="../portfolio/image/Ai_1_S.png" alt="그림자">
           </li>
