--- a/illust3/index.html
+++ b/illust3/index.html
@@ -13,7 +13,7 @@
     <div id="wrap">
         <section id="h_st">
             <ul>
-                <li><img src="../illust3/image/A_3.png" alt="햄스터 배경"></li>
+                <li><img class="main_bg" src="../illust3/image/A_3.png" alt="햄스터 배경"></li>
                 <li><img src="../../portfolio/illust3/image/A_3_i.png" alt="햄스터"></li>
             </ul>
             
