--- a/illust1/index.html
+++ b/illust1/index.html
@@ -13,7 +13,7 @@
     <div id="wrap">
         <section id="an_b">
             <ul>
-                <li><img src="../../portfolio/illust1/image/anb.png" alt="비행선 배경"></li>
+                <li><img class="main_bg" src="../../portfolio/illust1/image/anb.png" alt="비행선 배경"></li>
                 <li><img src="../../portfolio/illust1/image/Ai_G01.png" alt=""></li>
                 <li><img src="../../portfolio/illust1/image/Ai_G02.png" alt=""></li>
                 <li><img src="../../portfolio/illust1/image/Ai_G03.png" alt=""></li>
