--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <h3>About me </h3>
         
         <ul>
-          <li><a href="http://wjsdud159.dothome.co.kr/" target="_blank">Dothome</a></li>
-          <li><a href="https://wjsdud248.tistory.com/">Tstory</a></li>
-          <li><a href="https://codepen.io/wjsdud248">Codepen</a></li>
+          <li><a href=" https://wjsdud159.github.io/wjsdud248/" target="_blank">Dothome</a></li>
+          <li><a href="https://wjsdud248.tistory.com/"target="_blank">Tstory>Tstory</a></li>
+          <li><a href="https://codepen.io/wjsdud248"target="_blank">Codepen>Codepen</a></li>
         </ul>
         
           <img class="about_img" src="../portfolio/image/icon223.png" alt="나">  
