--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         
         <ul>
           <li><a href=" https://wjsdud159.github.io/wjsdud248/" target="_blank">Dothome</a></li>
-          <li><a href="https://wjsdud248.tistory.com/"target="_blank">Tstory>Tstory</a></li>
-          <li><a href="https://codepen.io/wjsdud248"target="_blank">Codepen>Codepen</a></li>
+          <li><a href="https://wjsdud248.tistory.com/"target="_blank">Tstory></a></li>
+          <li><a href="https://codepen.io/wjsdud248"target="_blank">Codepen></a></li>
         </ul>
         
           <img class="about_img" src="../portfolio/image/icon223.png" alt="나">  
