--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h3>About me </h3>
         
         <ul>
-          <li><a href=" https://wjsdud159.github.io/wjsdud248/" target="_blank">Dothome</a></li>
+          <li><a href="https://wjsdud159.github.io/wjsdud248/html/index.html" target="_blank">Dothome</a></li>
           <li><a href="https://wjsdud248.tistory.com/"target="_blank">Tstory</a></li>
           <li><a href="https://codepen.io/wjsdud248"target="_blank">Codepen</a></li>
         </ul>
